# psx-rs

./: .gitignore  BUILD.md  Cargo.toml  README.md  rustfmt.toml
libpsx-rs/: Cargo.toml  build.rs
libpsx-rs/docs/: GPU.md
libpsx-rs/src/: backends.rs  constants.rs  controllers.rs  debug.rs  executor.rs  lib.rs  resources.rs  serialization.rs  system.rs  types.rs  utilities.rs
libpsx-rs/src/backends/: audio.rs  cdrom.rs  context.rs  video.rs
libpsx-rs/src/backends/audio/: open_al.rs  openal.rs
libpsx-rs/src/backends/cdrom/: libcdio.rs  libmirage.rs
libpsx-rs/src/backends/video/: opengl.rs
libpsx-rs/src/constants/: cdrom.rs  dmac.rs  gpu.rs  intc.rs  r3000.rs  spu.rs  timers.rs
libpsx-rs/src/constants/gpu/: crtc.rs
libpsx-rs/src/constants/spu/: dac.rs
libpsx-rs/src/controllers/: cdrom.rs  dmac.rs  gpu.rs  intc.rs  joystick.rs  padmc.rs  r3000.rs  spu.rs  timers.rs
libpsx-rs/src/controllers/cdrom/: Notes.txt  backend_dispatch.rs  command.rs  command_impl.rs  debug.rs  interrupt.rs  libmirage.rs  read.rs
libpsx-rs/src/controllers/dmac/: channel.rs  debug.rs  linked_list.rs  transfer.rs
libpsx-rs/src/controllers/gpu/: backend_dispatch.rs  command.rs  command_gp0.rs  command_gp0_impl.rs  command_gp1.rs  command_gp1_impl.rs  crtc.rs  data.rs  debug.rs  gp0.rs  gp1.rs  open_gl.rs  opengl.rs
libpsx-rs/src/controllers/intc/: debug.rs
libpsx-rs/src/controllers/padmc/: command.rs
libpsx-rs/src/controllers/r3000/: debug.rs  exception.rs  hazard.rs  instruction.rs  instruction_impl.rs  instruction_impl_cop2.rs  memory_controller.rs  register.rs
libpsx-rs/src/controllers/spu/: adpcm.rs  adsr.rs  backend_dispatch.rs  dac.rs  interpolation.rs  interrupt.rs  open_al.rs  openal.rs  sound.rs  transfer.rs  voice.rs  volume.rs
libpsx-rs/src/controllers/timers/: count.rs  debug.rs  irq.rs  mode.rs  timer.rs
libpsx-rs/src/debug/: benchmark.rs
libpsx-rs/src/resources/: cdrom.rs  dmac.rs  gpu.rs  intc.rs  joystick.rs  memory_control.rs  padmc.rs  r3000.rs  spu.rs  timers.rs
libpsx-rs/src/resources/cdrom/: register.rs
libpsx-rs/src/resources/dmac/: channel.rs  debug.rs  register.rs
libpsx-rs/src/resources/gpu/: crtc.rs  data.rs  register.rs
libpsx-rs/src/resources/intc/: register.rs
libpsx-rs/src/resources/joystick/: register.rs
libpsx-rs/src/resources/padmc/: register.rs
libpsx-rs/src/resources/r3000/: cp0.rs  cp2.rs
libpsx-rs/src/resources/spu/: dac.rs  register.rs  voice.rs
libpsx-rs/src/resources/timers/: register.rs  timer.rs
libpsx-rs/src/system/: bus.rs  cdrom.rs  dmac.rs  gpu.rs  intc.rs  memory.rs  padmc.rs  r3000.rs  types.rs
libpsx-rs/src/system/bus/: memory.rs  types.rs
libpsx-rs/src/system/cdrom/: constants.rs  controllers.rs  memory.rs  types.rs
libpsx-rs/src/system/dmac/: constants.rs  controllers.rs  memory.rs  types.rs
libpsx-rs/src/system/gpu/: constants.rs  controllers.rs  crtc.rs  memory.rs  types.rs
libpsx-rs/src/system/intc/: constants.rs  controllers.rs  memory.rs  types.rs
libpsx-rs/src/system/memory/: constants.rs  memory.rs  types.rs
libpsx-rs/src/types/: access_context.rs  array.rs  b8_memory_mapper.rs  bitfield.rs  color.rs  exclusive_state.rs  fifo.rs  flag.rs  geometry.rs  gte.rs  memory.rs  mips1.rs  queue.rs  register.rs  stereo.rs
libpsx-rs/src/utilities/: array.rs  mips1.rs  numeric.rs  packed.rs  primitive.rs  threadpool.rs
libpsx-rs/tools/Instruction Generation/: COP2 Instruction List.ods  Instruction List Parser.py  Instruction List.ods  core.rs  lookup.rs
libpsx-rs/tools/Instruction Lookup Generation/: COP2 Instruction List.csv  Instruction List.csv  Instruction Lookup Generation.py
libpsx-rs/tools/Memory Map Generation/: .~lock.Memory Mappings.ods#  Map Grep.py  Memory Map Generation.py  Memory Mappings.csv  Memory Mappings.ods  results.csv
libpsx-rs/tools/Register Generation/: Register Generation.py  declarations.txt  definitions.txt  memory_mappings.txt
libpsx-rs/tools/Register Parser/: Register Parser.py  declarations.txt  definitions.txt  memory_mappings.txt
psx-rs/: Cargo.toml  build.rs
psx-rs/src/: backend.rs  config.rs  main.rs  state.rs
psx-rs/src/backend/: audio.rs  cdrom.rs  video.rs
(+226 files in other folders)
