[workspace]
members = [
    "build-tools",
    "opengl-sys",
    "openal-sys",
    "libmirage-sys",
    "libpsx-rs",
    "psx-rs",
    "psx-rs-cli",
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package."libpsx-rs"]
opt-level = 0

[profile.release.package."*"]
opt-level = 3

[profile.release.package."libpsx-rs"]
debug = true

[profile.release]
lto = true
