[package]
name = "libpsx-rs"
version = "0.1.0"
authors = ["Marco Satti <marcosatti@gmail.com>"]
edition = "2018"

[dependencies]
opengl-sys = { path = "../opengl-sys" }
openal-sys = { path = "../openal-sys" }
libmirage-sys = { path = "../libmirage-sys" }
libcdio-sys = { path = "../libcdio-sys" }
spsc-ringbuffer = { git = "https://github.com/marcosatti/spsc-ringbuffer" }
scoped-threadpool = { git = "https://github.com/marcosatti/scoped-threadpool" }
parking_lot = "*"
log = "*"
ansi_term = "*"
euclid = "*"
num-traits = "*"
lazy_static = "*"
sdl2 = "*"
average = "*"
hashbrown = "*"
lru = "*"
fixed = "*"
typenum = "*"
crossbeam = "*"
enum-as-inner = "*"

[build-dependencies]
build-tools = { path = "../build-tools" }
