[package]
name = "libpsx-rs"
version = "0.1.0"
authors = ["Marco Satti <marcosatti@gmail.com>"]
edition = "2018"

[dependencies]
opengl-sys = { path = "../opengl-sys" }
openal-sys = { path = "../openal-sys" }
libmirage-sys = { path = "../libmirage-sys" }
libcdio-sys = { path = "../libcdio-sys" }
parking_lot = { version = "*", features = ["serde"] }
log = "*"
euclid = "*"
num-traits = "*"
lazy_static = "*"
hashbrown = "*"
fixed = "*"
typenum = "*"
atomic_enum = "*"
array-macro = "*"
stdext = "*"
smallvec = { version = "*", features = ["union", "const_generics"] }
spsc-ringbuffer = { git = "https://github.com/marcosatti/spsc-ringbuffer", features = ["serialization"] }
serde = { version = "*", optional = true, features = ["derive"] }
bincode = { version = "*", optional = true }
zstd = { version = "*", optional = true }

[build-dependencies]
build-tools = { path = "../build-tools" }

[features]
default = ["serialization"]
serialization = ["serde", "bincode", "zstd"]
