[package]
name = "psx-rs"
version = "0.1.0"
authors = ["Marco Satti <marcosatti@gmail.com>"]
edition = "2018"

[dependencies]
sdl2 = "*"
chrono = "*"
fern = "*"
log = "*"
ctrlc = "*"
opengl-sys = { path = "../opengl-sys" }
openal-sys = { path = "../openal-sys" }
libmirage-sys = { path = "../libmirage-sys" }
libpsx-rs = { path = "../libpsx-rs" }

[build-dependencies]
build-tools = { path = "../build-tools" }
